added scheduled code fetching
- Implemented scheduled tasks using `tokio-cron-scheduler` to fetch and update Star Rail codes and news.
- Created `resolvers/starrail/codes/sources/` and `resolvers/starrail/news/sources/` modules to handle fetching data from different sources (e.g., Eurogamer, Game8 for codes; Hoyolab for news).
- Created `src/resolvers/starrail` module as a centralized entry point.
- Codes and news are now fetched, stored in the database, and properly deduped.
- Added logging for successful and failed updates.
- Includes thorough testing for code and news fetching from multiple sources.
- Implemented `Scheduler` struct for managing and starting the scheduled tasks.
- Updated dependency `tokio-cron-scheduler`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,12 @@ config = { version = "0.14", features = ["yaml"] }
 # Utilities
 async-trait = "0.1.80"
 bytes = "1.7.1"
+
+# HTML Parsing
+scraper = "0.21"
+
+# Cron Scheduler
+tokio-cron-scheduler = "0.13"
+
+[dev-dependencies]
+tracing-test = "0.2"
