--- a/config/example.config.yaml
+++ b/config/example.config.yaml
@@ -2,6 +2,7 @@ server:
   host: "127.0.0.1"
   port: 8080
   cors_origins: ["*"]
+  user_agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36"
 
 redis:
   url: "redis://127.0.0.1:6379"
@@ -19,4 +20,21 @@ mongodb:
 
 logging:
   level: "debug"
-  format: "pretty" 
+  format: "pretty"
+
+game_accounts:
+  # Support multiple accounts for each game (for now it does not do anything for secondary accounts)
+  genshin:
+    - cookie_token_v2: "v2_token_here"
+      account_mid_v2: "mid_v2_here"
+      account_id_v2: "account_id_here"
+      uid: "800373119"
+      nickname: "Main Account"
+      region: "os_eur"
+  starrail:
+    - cookie_token_v2: "v2_token_here"
+      account_mid_v2: "mid_v2_here"
+      account_id_v2: "account_id_here"
+      uid: "800373119"
+      nickname: "Main Account"
+      region: "prod_official_eur"
