--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ futures-util = "0.3"
 
 # Web Framework and HTTP
 axum = { version = "0.7", features = ["macros"] }
-tower-http = { version = "0.6.1", features = ["trace", "cors", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
+tower-http = { version = "0.6.1", features = ["trace", "cors", "request-id", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
 tower = "0.5.0"
 hyper = { version = "1", features = ["full"] }
 http-body = "1.0"
