--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ fred = { version = "9.2.1", features = ["enable-rustls", "metrics", "sentinel-cl
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_repr = "0.1"
 
 # HTTP Client
 reqwest = { version = "0.12.8", features = ["json", "rustls-tls", "cookies"], default-features = false }
