add Discord webhook notifications for new game codes
- Add Discord config with optional webhook URL
- Create webhook service to send formatted notifications
- Integrate notifications into code verification flow

--- a/config/example.config.yaml
+++ b/config/example.config.yaml
@@ -17,6 +17,9 @@ mongodb:
   url: "mongodb://127.0.0.1:27017"
   database: "hoyoverse"
 
+discord:
+  webhook_url: null
+
 logging:
   level: "info"
   format: "pretty"
