--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ bytes = "1.8.0"
 regex = "1.11.1"
 uuid = { version = "1.11.0", features = ["v4"] }
 once_cell = "1.20.2"
+urlencoding = "2.1"
 
 # HTML Parsing
 scraper = "0.21.0"
