--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-feature
 tower-http = { version = "0.6", features = ["trace", "cors", "compression-br", "compression-gzip", "compression-zstd"] }
 axum = { version = "0.7", features = ["macros"] }
 tower = "0.5"
+tower_governor = "0.4"
 
 [[bin]]
 name = "test-parser"
