feat(notifier): add discord webhook notification for new valid codes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,7 @@ path = "scripts/test_redemption.rs"
 name = "test-calendar"
 path = "scripts/test_calendar.rs"
 
+[[bin]]
+name = "test-notifier"
+path = "scripts/test_notifier.rs"
+
