feat(metrics): add prometheus metrics
- install metrics-prometheus as global recorder in main
- expose /metrics endpoint via prometheus TextEncoder
- add BaseMetricLayer for http request/latency metrics
- add track_client middleware (route_layer) for per-endpoint client type counters
- add scraper_codes_discovered_total and scraper_codes_invalid_total counters per game
- add validator_codes_deactivated_total counter per game

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,11 @@ bson = { version = "2.11", features = ["chrono-0_4"] }
 
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
 
+axum-prometheus = "0.7"
+metrics = "0.23"
+metrics-prometheus = "0.7"
+prometheus = "0.13"
+
 tower-http = { version = "0.6", features = ["trace", "cors", "compression-br", "compression-gzip", "compression-zstd"] }
 axum = { version = "0.7", features = ["macros"] }
 tower = "0.5"
