--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ tower-http = { version = "0.6", features = ["trace", "cors", "compression-br", "
 axum = { version = "0.7", features = ["macros"] }
 tower = "0.5"
 tower_governor = "0.4"
+moka = { version = "0.12", features = ["future"] }
 
 [[bin]]
 name = "test-parser"
